--- a/styles/master.css
+++ b/styles/master.css
@@ -8,100 +8,23 @@
 }
 
 
-body {
-  
-  font-family: "Krona One";
-  color: #093824;
-  background: linear-gradient(
-    transparent, 
-    white);
-}
-
-h1{
-  color:#093824;
-  font-weight:600;
-  font-size: 5em;
-  
-}
-
-
-h2{
-  color:#093824;
-  font-weight:200;
-  font-size: 2.5em;
-  border-bottom: .1em solid #dc0428;
-}
-
-
-
-
-
-select,input{
-  background: 
-rgba(9, 56, 36, 0.1);
-border-radius:.2em;
-border:none;
-color: #093824;
-}
-
-
-
-header{
-  border: .2em solid #dc0428;
-  border-radius: .5em;
-  background: white;
-}
-
-/* "select all elements in <section> 
-section > *{
-  margin:10px;
-}
-*/
-
-section{
-  border: .2em solid red;
-  border-radius:.5em;
-  background-color: white;
-  
-
-}
-
-
-form{
-  text-transform: uppercase;
-}
-
-
-fieldset{
-  border-top:#76877d 3px solid;
-  border-bottom:#76877d 3px solid;
-  
-}
-
-button,a{
-  background: #dc0428;
-  height: 25px;
-  width: 130px;
-  border:.2em solid white;
-  border-radius: .5em;
-  color: white;
-  box-shadow: 0px 2px 2px 2px rgba(156, 154, 154, 0.8);
-  text-decoration: none;
-  
-
-
-}
-
-a:hover, button:hover{
-  border: .2em solid #dc0428;
-  background: white;
-  color: #dc0428;
-  box-shadow: 0px 2px 2px 2px rgba(156, 154, 154, 0.8);
-}
-
 
 footer{
-  background: white;
-  color:black;
-  text-transform: uppercase;
+  background: black;
+  color:white;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  padding: 1em;
+font-size: 1.5em;
+}
+
+footer li a{
+  color: white;
+}
+footer li a:visited{
+  color:rgb(189, 180, 79);
+}
+footer li a:hover{
+  color:red;
 }
