--- a/styles/master.css
+++ b/styles/master.css
@@ -6,6 +6,8 @@
 
 body{
   font-family: 'Krona One', sans-serif;
+  
+  
 
 
 }
@@ -40,11 +42,9 @@ header{
     opacity: 1;
   }
 }
-main section:first-of-type div:nth-of-type(2),
-main section:first-of-type div:nth-of-type(3){
-  font-size: 1em;
+main section:first-of-type p{
+  font-size: 1.3em;
 }
-
 
 a{
   text-decoration: none;
@@ -58,6 +58,7 @@ header nav ul{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color: white;
   flex-wrap: wrap;
 }
 
@@ -84,15 +85,18 @@ header nav ul a:visited{
 }
 header nav ul div:last-of-type li:hover{
   transform: scale(0.85); 
-  background-color: #F72585; 
+  background-color: #AF469A; 
   color: white; 
 }
 
 
 /* -- welcome section */
 main section:first-of-type{
-  border-radius: 3em;
-  border:.3em solid lightgray;
+  border-top-right-radius: 3em;
+  border-bottom-right-radius: 3em;
+  background-color: #AF469A; /*#AF469A*/
+  color: white;
+  box-shadow: 1px 2px 10px 3px rgb(173, 173, 173); /* no border but box-shadow */
   padding:2.5em;
   display: inline-flex;
   flex-direction: column;
@@ -103,7 +107,7 @@ main section:first-of-type{
   transition: .2s transform ease-in-out;
 }
 main section:first-of-type span{
-  color:#7209B7;
+  color:#25D09D;
 }
 
 
@@ -137,26 +141,21 @@ main section:first-of-type h2{
 }
 
 
-main section:first-of-type:hover{
-  background-color:#D90866;
-  color: white;
-  border: .3em solid #640530;
-  transform: scale(0.98);
-}
-
 main section:first-of-type button{
   align-self: center;
+  background-color: #25D09D; /* 25D09D */
   font-weight: bolder;
   font-size: 1em;
   margin-left: 1em;
-  text-decoration: none;
+  cursor: pointer;
   border: .2em solid lightgray;
   border-radius: 2em;
   padding: 1em 3em 1em 3em;
+  transition: .2s transform ease-in-out;
 }
 
 main section:first-of-type button:hover{
-  border:.3em transparent #7209B7;
+  transform: scale(1.08);
 }
 
 
