--- a/styles/master.css
+++ b/styles/master.css
@@ -94,7 +94,7 @@ header nav ul div:last-of-type li:hover{
 main section:first-of-type{
   border-top-right-radius: 3em;
   border-bottom-right-radius: 3em;
-  background-color: #AF469A; /*#AF469A*/
+  background-color: #0974F1; /*#AF469A*/
   color: white;
   box-shadow: 1px 2px 10px 3px rgb(173, 173, 173); /* no border but box-shadow */
   padding:2.5em;
@@ -143,7 +143,7 @@ main section:first-of-type h2{
 
 main section:first-of-type button{
   align-self: center;
-  background-color: #25D09D; /* 25D09D */
+  background-color: white; /* 25D09D */
   font-weight: bolder;
   font-size: 1em;
   margin-left: 1em;
