--- a/styles/master.css
+++ b/styles/master.css
@@ -164,13 +164,22 @@ main section:first-of-type button:hover{
 footer{
   background: black;
   color:white;
-  display: flex;
-  justify-content: space-between;
-  align-content: center;
   padding: 1em;
 font-size: 1.5em;
 }
 
+footer ul{
+  display: flex;
+  justify-content: space-evenly;
+}
+footer p{
+  padding-top: 1em;
+text-align: center;
+font-size: 0.8em;
+}
+footer .fas{
+  font-size: larger;
+}
 footer li a{
   color: white;
 }
