--- a/styles/search.css
+++ b/styles/search.css
@@ -1,6 +1,19 @@
 @import url(./reset.css);
+@import url(//fonts.googleapis.com/css?family=Krona+One);
+
 body{
-    background: linear-gradient(white,#0974F1);
+
+  font-family: 'Krona One', sans-serif;
+  background: hsla(210, 90%, 80%, 1);
+
+  background: linear-gradient(270deg, hsla(210, 90%, 80%, 0.3) 0%, hsla(212, 93%, 49%, 1) 100%);
+  
+  background: -moz-linear-gradient(270deg, hsla(210, 90%, 80%, 0.3) 0%, hsla(212, 93%, 49%, 1) 100%);
+  
+  background: -webkit-linear-gradient(270deg, hsla(210, 90%, 80%, 0.3) 0%, hsla(212, 93%, 49%, 1) 100%);
+  
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#9fccfa", endColorstr="#0974f1", GradientType=1 );
+ 
 }
 header{
     margin: 2em 0em 5em 0em;
@@ -34,8 +47,8 @@ a{
   
   header nav ul div img {
     padding-left: 5em;
-    height: 10em;
-    width: 10em;
+    height: 5em;
+    width: 5em;
 }
   header nav ul div:last-of-type{
     display: flex;
@@ -55,11 +68,11 @@ a{
   }
   
   header nav ul a:visited{
-    color: #4F97BA;
+    color: #FF007F;
   }
   header nav ul div:last-of-type li:hover{
     transform: scale(0.85); 
-    background-color: #8AD5E5; 
+    background-color: #FF007F; 
     color: white; 
   }
   header nav ul li i{
@@ -86,12 +99,12 @@ li input{
     width: 40em;
     height: 3em;
     border-radius: 0.4em;
-    border: 0.4em solid #7da9d181 ;
+    border: 0.3em solid #7da9d181 ;
     outline: none;
     text-indent: 1em;
 }
 li input:focus{
-    border: 0.4em solid black ;
+    border: 0.3em solid #FF007F ;
 
 }
 
@@ -106,7 +119,7 @@ li button{
 }
 
 li button:hover{
-    background-color: rgb(230, 94, 116);
+    background-color: #FF007F;
 }
 
 h2{
@@ -117,8 +130,9 @@ text-decoration:underline;}
 table {
     margin-top: 2em;
     text-align: center;  /* Centre aligning the text */
-margin-left: 15em; 
-margin-bottom: 2em; }
+margin-left: 8em; 
+margin-bottom: 2em; 
+font-size: 1em;}
 
 thead, th[scope="row"]{
     color: white;
@@ -128,7 +142,7 @@ thead, th[scope="row"]{
 th {
   border: 0.2em solid rgba(255, 255, 255, 0.63); /* white borders */
   padding: 0.5em;
-  width: 12em;
+  width: 15em;
   height: 1.5em;
 }
 thead tr th:first-of-type{
@@ -163,7 +177,7 @@ footer{
     color:#94BBDB;
   }
   footer li a:hover{
-    color:#d38796;
+    color:#FF007F;
   }
   
   header nav ul li i{
