--- a/styles/master.css
+++ b/styles/master.css
@@ -187,10 +187,10 @@ footer li a{
   color: white;
 }
 footer li a:visited{
-  color:#94BBDB;
+  color:#FF007F;
 }
 footer li a:hover{
-  color:#d38796;
+  color:#94BBDB;
 }
 
 footer ul li img{
