--- a/styles/cancelslot.css
+++ b/styles/cancelslot.css
@@ -193,7 +193,7 @@ main section div{
   justify-content: center;
 }
 
-button{
+main section div a{
   background-color: hsla(212, 65%, 49%, 1); /* 25D09D */
   color: white;
   font-weight: bolder;
@@ -206,7 +206,7 @@ button{
   margin-left: 1em;
 }
 
-button:hover{
+main section a:hover{
   transform: scale(1.08);
   border-color: #FF007F;
 }
@@ -252,7 +252,7 @@ tr{
   background-color: #90CAF9;
 }
 
-div button:first-of-type
+section div a:first-of-type
 {
   background-color: #D50000;
   margin-left: 0;
