--- a/styles/edit_account.css
+++ b/styles/edit_account.css
@@ -7,6 +7,7 @@
 body{
   font-family: 'Krona One', sans-serif;
   
+  
 
 }
 header{
@@ -78,8 +79,6 @@ header{
   }
   main{
     display: flex;
-    flex-direction: column;
-    
 }
   section{
     display: flex;
@@ -101,22 +100,25 @@ header{
     font-size: 2em;
 }
 
+#profpic{
+  margin-top: 7.5em;
+  font-size: .9em;
+  width:20%;
+  border-radius: 5em;
 
+}
 
 form div{
     transition: all .3s;
-    margin-bottom: 1em;
 }
-form div:nth-of-type(4){
-    margin-bottom: 0.3em;
+form>*{
+  margin-bottom: 1.5em;
 }
+
 form div:last-of-type{
     align-self: flex-end;
 }
-aside{
-    margin-bottom: 1.5em;
-    font-size: 1em;
-}
+
 form label:not(label[id="special"]){
     font-size: 1.3em;
     display: block;
