--- a/styles/cancelslot.css
+++ b/styles/cancelslot.css
@@ -224,7 +224,8 @@ tr th{
 
 table{
   margin-top: 2em;
-  margin-left: 1em;
+  margin-left: auto;
+  margin-right: auto;
   border-collapse: separate;
   color: black;
   text-align: center;
