Slot sign-up table will be blank when empty now

--- a/styles/mystuff.css
+++ b/styles/mystuff.css
@@ -80,6 +80,11 @@ a{
       text-align: center;
       font-size: 2em;
   }
+  h3{
+    text-align: center;
+    padding: 1em;
+    font-size: 1em;
+  }
   main table{
     margin: 2em;
     text-align: center;  /* Centre aligning the text */
