fixed transparent navbar in mystuff.php

--- a/styles/mystuff.css
+++ b/styles/mystuff.css
@@ -76,6 +76,10 @@ a{
     margin-left: .5em;
   }
 
+  header nav ul div:last-of-type{
+    background-color: white;
+  }
+
   h2{
       text-align: center;
       font-size: 2em;
