--- a/styles/search.css
+++ b/styles/search.css
@@ -57,8 +57,8 @@ main div{
     box-shadow: 1px 2px 10px 3px rgb(173, 173, 173); /* no border but box-shadow */
     margin-right: 2em;
     border-radius: 2em;
-    min-width: 40vw;  /* for larger screens, it can grow*/
     height: 3.5em;
+    background-color: white;
   }
   
   header nav ul li{
