profile_pic changes in edit_account done. it will just overwrite the old pic

--- a/styles/edit_account.css
+++ b/styles/edit_account.css
@@ -105,7 +105,13 @@ header{
   font-size: .9em;
   width:20%;
   border-radius: 5em;
+  display: flex;
+}
 
+#profpic button{
+  background-color: hsla(212, 65%, 49%, 1);
+  margin-top: 1em;
+  
 }
 
 form div{
@@ -197,6 +203,8 @@ form button{
 form button:hover{
     transform: scale(1.08);
 }
+
+
 
 .deletebutton{
     display: flex;
