--- a/styles/registration.css
+++ b/styles/registration.css
@@ -167,6 +167,8 @@ input[id="profilepic"]{
 }
 
 
+
+
 /*footer */
 footer{
     color:white;
@@ -177,3 +179,23 @@ footer{
   }
   
   
+/* styling for dynamic elements */
+.available{
+    color: #32babd;
+    margin-bottom: 1em;
+}
+.fa-check{
+    margin-left:.5em;
+    color: #32babd;
+    margin-bottom: 1.3em;
+}
+
+.notAvailable{
+    color:#C95D63;
+    margin: 0.5em;
+}
+.fa-times{
+    margin-left: .5em;
+    color:#C95D63;
+    margin-bottom: 1.3em;
+}
