--- a/styles/create.css
+++ b/styles/create.css
@@ -199,11 +199,6 @@ legend{
   padding-top: 1em;
 }
 
-/* https://gist.github.com/rondevera/167627 */
-form div:nth-child(n+5):nth-child(-n+11){
-  padding-bottom: 1em;
-}
-
 fieldset:last-of-type + div{
   padding-top: 1em;
 }
@@ -245,4 +240,20 @@ form input, select, textarea{
 
 main section div:nth-child(9), main section div:last-child{
   display: block;
+}
+
+main section div:nth-last-child(2){
+  display: flex;
+  flex-direction: row;
+}
+
+main section div:nth-last-child(2) label{
+  padding-top: 0em;
+  padding-bottom: 0em;
+  padding-left: 1em;
+}
+
+main section div:nth-last-child(2){
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
